fix alignment problem in firefox

--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -187,7 +187,7 @@ p {
         margin: 0 0;
     }
     .buttonWrapper button {
-        width: 100px;
+        min-width: 100px;
         height: 50px;
     }
     #taskBtn {
